fix wrong margin-bottom

--- a/styles.css
+++ b/styles.css
@@ -20,34 +20,34 @@
 
 .col.overviewmyrolesincourses-coursefinished {
     border-left: solid 5px rgb(155, 13, 13);
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 5px;
 }
 .col.overviewmyrolesincourses-coursefinished.dimmed {
     border-left: solid 5px rgb(166, 119, 119);
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 5px;
 }
 
 .col.overviewmyrolesincourses-courseinprogress {
     border-left: solid 5px rgb(53, 244, 127);
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 5px;
 }
 .col.overviewmyrolesincourses-courseinprogress.dimmed {
     border-left: solid 5px rgb(111, 169, 134);
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 5px;
 }
 
 .col.overviewmyrolesincourses-coursefuture {
     border-left: solid 5px rgb(58, 132, 241);
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 5px;
 }
 .col.overviewmyrolesincourses-coursefuture.dimmed {
     border-left: solid 5px rgb(158, 190, 238);
-    margin-bottom: 5px;
+    margin-bottom: 0;
     padding-left: 5px;
 }
 .overviewmyrolesincourses-foldonstart {
